--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <div class="home-img">
           <div class="lanyard-card">
             <div class="lanyard-front">
-              <img src="images/home.png" alt="Front Image" />
+              <img src="home.png" alt="Front Image" />
             </div>
             <div class="lanyard-back">
-              <img src="images/homeback.png" alt="Back Image" />
+              <img src="homeback.png" alt="Back Image" />
             </div>
           </div>
           <span class="animate home-img" style="--i: 7"></span>
@@ -83,7 +83,7 @@
         About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
       </h2>
       <div class="about-img animate">
-        <img src="images/about.png" alt="" />
+        <img src="about.png" alt="" />
         <span class="circle-spin"></span>
         <span class="animate scroll" style="--i: 2"></span>
       </div>
