--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -21,6 +21,9 @@
       <a href="#" class="logo"
         ><span class="animate" style="--i: 1"></span
       ></a>
+      <a href="CV RAMANDANI.pdf" download>
+        <img src="icondownload.png" alt="Download CV" width="30">
+    </a>    
       <div class="bx bx-menu" id="menu-icon">
         <span class="animate" style="--i: 2"></span>
       </div>
@@ -48,7 +51,7 @@
             <span class="animate" style="--i: 3"></span>
           </div>
           <p>
-            I am a computer science student, and I have a
+            I am a computer science student, and I have strengths in developer, network, design.
             <span class="animate" style="--i: 4"></span>
           </p>
           <div class="home-sci">
@@ -66,10 +69,10 @@
         <div class="home-img">
           <div class="lanyard-card">
             <div class="lanyard-front">
-              <img src="home.png" alt="Front Image" />
+              <img src="images/home.png" alt="Front Image" />
             </div>
             <div class="lanyard-back">
-              <img src="homeback.png" alt="Back Image" />
+              <img src="images/homeback.png" alt="Back Image" />
             </div>
           </div>
           <span class="animate home-img" style="--i: 7"></span>
@@ -83,7 +86,7 @@
         About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
       </h2>
       <div class="about-img animate">
-        <img src="about.png" alt="" />
+        <img src="images/about.png" alt="" />
         <span class="circle-spin"></span>
         <span class="animate scroll" style="--i: 2"></span>
       </div>
@@ -361,6 +364,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
