--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -69,10 +69,10 @@
         <div class="home-img">
           <div class="lanyard-card">
             <div class="lanyard-front">
-              <img src="images/home.png" alt="Front Image" />
+              <img src="home.png" alt="Front Image" />
             </div>
             <div class="lanyard-back">
-              <img src="images/homeback.png" alt="Back Image" />
+              <img src="homeback.png" alt="Back Image" />
             </div>
           </div>
           <span class="animate home-img" style="--i: 7"></span>
@@ -86,7 +86,7 @@
         About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
       </h2>
       <div class="about-img animate">
-        <img src="images/about.png" alt="" />
+        <img src="about.png" alt="" />
         <span class="circle-spin"></span>
         <span class="animate scroll" style="--i: 2"></span>
       </div>
@@ -364,6 +364,6 @@
       </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
